# nomad-r-runner

./: GUIDE.md  README.md  pyproject.toml
contrib/: nomad-dev.hcl
examples/: README.md  data_summary.R  hello.R  needs_glmnet.R  packages.txt  plot_output.R  read_data.R  save_results.R
examples/sample_data/: iris_subset.csv
src/nomad_r_runner/: __init__.py  cli.py  diagnose.py  hardware.py  image.py  job.py  output.py
tests/: conftest.py  test_cli.py  test_diagnose.py  test_hardware.py  test_image.py  test_job.py
